tests/errors/semantic/blocking/ADD_SET_INCOMPATIBLE_TYPES_1.py
# Expecting an argument of the same type as the elements of the set
# pylint: disable=missing-function-docstring, missing-module-docstring

a = {1,2,3}
b = 5j
a.add(b)
